[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/bullets-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyBullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Bullet" type="Area2D" groups=["bullet"]]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2( 1.05709, 0.542733 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 42, 11, 10, 10 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="child_entered_tree" from="Collider" to="." method="_on_Collider_child_entered_tree"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
